--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="swiper-container hero-slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide hero-content-wrap" style="background-image: url('images/hero1.jpg')">
+                <div class="swiper-slide hero-content-wrap" style="background-image: url('images/hero.jpg')">
                     <div class="hero-content-overlay position-absolute w-100 h-100">
                         <div class="container h-100">
                             <div class="row h-100">
@@ -91,7 +91,7 @@
                     </div><!-- .hero-content-overlay -->
                 </div><!-- .hero-content-wrap -->
 
-                <div class="swiper-slide hero-content-wrap" style="background-image: url('images/hero1.jpg')">
+                <div class="swiper-slide hero-content-wrap" style="background-image: url('images/hero.jpg')">
                     <div class="hero-content-overlay position-absolute w-100 h-100">
                         <div class="container h-100">
                             <div class="row h-100">
